--- a/style/admin.css
+++ b/style/admin.css
@@ -443,4 +443,75 @@ body {
   color: #134a46;
   font-weight: 700;
   cursor: pointer;
+}
+#main .dashboard .deleteUserSection {
+  flex: 1;
+  padding: 25px;
+  background-color: #fefaf9;
+  display: none;
+}
+#main .dashboard .deleteUserSection .deleteUserSection-container {
+  height: 100%;
+  width: 100%;
+  background-color: #cfffe0;
+  border-radius: 8px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+#main .dashboard .deleteUserSection .deleteUserSection-container .heading h1 {
+  color: #0f3d3a;
+  font-size: 1.5rem;
+}
+#main .dashboard .deleteUserSection .deleteUserSection-container .delete-members-container {
+  background: #0f3d3a;
+  padding: 15px;
+  border-radius: 10px;
+  color: white;
+  height: 80%;
+  width: 100%;
+}
+#main .dashboard .deleteUserSection .deleteUserSection-container .delete-members-container .delete-members-header,
+#main .dashboard .deleteUserSection .deleteUserSection-container .delete-members-container .delete-member-row {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1.5fr 1fr;
+  padding: 10px;
+  align-items: center;
+}
+#main .dashboard .deleteUserSection .deleteUserSection-container .delete-members-container .delete-members-header {
+  font-weight: bold;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  margin-bottom: 8px;
+}
+#main .dashboard .deleteUserSection .deleteUserSection-container .delete-members-container .delete-member-row {
+  background: #134a46;
+  margin-bottom: 6px;
+  border-radius: 6px;
+}
+#main .dashboard .deleteUserSection .deleteUserSection-container .delete-members-container .delete-member-row .status {
+  font-weight: 600;
+}
+#main .dashboard .deleteUserSection .deleteUserSection-container .delete-members-container .delete-member-row .status.active {
+  color: #4cff9f;
+}
+#main .dashboard .deleteUserSection .deleteUserSection-container .delete-members-container .delete-member-row .status.blocked {
+  color: #ff6b6b;
+}
+#main .dashboard .deleteUserSection .deleteUserSection-container .delete-members-container .delete-member-row .deleteAction {
+  display: flex;
+  gap: 10px;
+}
+#main .dashboard .deleteUserSection .deleteUserSection-container .delete-members-container .delete-member-row .deleteAction #deleteUser {
+  padding: 3px 10px;
+  border: none;
+  border-radius: 3px;
+  background: #ff6b6b;
+  color: #fff;
+  font-weight: 700;
+  cursor: pointer;
+  transition: all ease 0.2s;
+}
+#main .dashboard .deleteUserSection .deleteUserSection-container .delete-members-container .delete-member-row .deleteAction #deleteUser:hover {
+  transform: scale(1.05);
 }/*# sourceMappingURL=admin.css.map */
