--- a/style/admin.scss
+++ b/style/admin.scss
@@ -512,7 +512,7 @@ body {
             display: flex;
             flex-direction: column;
             // gap: 10px;
-            button{
+            button {
               padding: 10px;
               border: none;
               background: #4cff9f;
@@ -520,6 +520,95 @@ body {
               color: #134a46;
               font-weight: 700;
               cursor: pointer;
+            }
+          }
+        }
+      }
+    }
+
+    .deleteUserSection {
+      flex: 1;
+      padding: 25px;
+      background-color: #fefaf9;
+
+      display: none;
+
+      .deleteUserSection-container {
+        height: 100%;
+        width: 100%;
+        background-color: #cfffe0;
+        border-radius: 8px;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        .heading {
+          h1 {
+            color: #0f3d3a;
+            font-size: 1.5rem;
+          }
+        }
+
+        .delete-members-container {
+          background: #0f3d3a;
+          padding: 15px;
+          border-radius: 10px;
+          color: white;
+          height: 80%;
+          width: 100%;
+
+          .delete-members-header,
+          .delete-member-row {
+            display: grid;
+            grid-template-columns: 2fr 1fr 1.5fr 1fr;
+            padding: 10px;
+            align-items: center;
+          }
+
+          .delete-members-header {
+            font-weight: bold;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+            margin-bottom: 8px;
+          }
+
+          .delete-member-row {
+            background: #134a46;
+            margin-bottom: 6px;
+            border-radius: 6px;
+
+            .status {
+              font-weight: 600;
+
+              &.active {
+                color: #4cff9f;
+              }
+
+              &.blocked {
+                color: #ff6b6b;
+              }
+            }
+
+            .deleteAction {
+              display: flex;
+              gap: 10px;
+
+              
+
+              #deleteUser {
+                padding: 3px 10px;
+                border: none;
+                border-radius: 3px;
+                background: #ff6b6b;
+                color: #fff;
+                font-weight: 700;
+                cursor: pointer;
+                transition: all ease 0.2s;
+              }
+
+              #deleteUser:hover {
+                transform: scale(1.05);
+              }
             }
           }
         }
